# tulsu-pe-timetable

./: .gitignore  Cargo.toml  README.md  app.go  go.mod  go.sum  main.go  package.json  pnpm-lock.yaml  wails.json
.cursor/rules/: default.mdc
.github/workflows/: build.yml
.sqlx/: query-42aee94a2408b15cb50dc88cdcecf39a55cdb17dad3c9149cc57ef85c0dd19a0.json  query-b43bca683c1f57bc62491d3db43edd38173600d479e576b03ebba17d03271cde.json
backend/app_services/: app.go
backend/config/: config.go
backend/locales/: locales.go  ru.json
backend/migrations/: 0001_initial.sql  0002_safe_columns.go  embed.go
backend/storage/: README.md  database.go  directions.go  faculties.go  lessons.go  models.go  semesters.go  storage.go  teachers.go
frontend/: index.html  package.json  package.json.md5  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.cjs
frontend/src/: App.svelte  main.ts  style.css
frontend/src/lib/i18n/: index.ts
frontend/src/lib/locales/: ru.json
frontend/src/lib/stores/: directions.ts  faculties.ts  router.ts  semester-teachers.ts  semesters.ts  teachers.ts  theme.ts
frontend/wailsjs/go/: models.ts
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/migrations/: 20250609230718_init.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: mod.rs  response.rs
src-tauri/src/config/: create.rs
src-tauri/src/db/: init.rs  mod.rs
src-tauri/src/utils/: macros.rs
src/api/: count.ts  greet.ts  invoke.ts
src/api/types/: count.ts  greet.ts  instructors.ts
(+22 files in other folders)
